@@ -1,55 +1,226 @@
-# Pacman Game Project Description
+# Pacman
 
-## Code Summary
+<div align="center">
 
-This project is a recreation of the classic Pacman game implemented using **JavaFX**. The game consists of a player-controlled Pacman that navigates a maze, collecting points and avoiding ghosts. The player wins by collecting all points and loses when they run out of lives. The game includes several features such as ghost AI, score tracking, high score persistence, and a fully responsive user interface. The project uses JavaFX to handle animations, user input, and graphical rendering.
+![Java](https://img.shields.io/badge/Java-11-orange?style=for-the-badge&logo=java)
+![JavaFX](https://img.shields.io/badge/JavaFX-11-blue?style=for-the-badge&logo=java)
+![Game](https://img.shields.io/badge/Type-Arcade%20Game-yellow?style=for-the-badge)
+![Status](https://img.shields.io/badge/Status-Complete-brightgreen?style=for-the-badge)
+![Maven](https://img.shields.io/badge/Maven-3.6+-red?style=for-the-badge&logo=apachemaven)
 
-## Program Description and Usage
+**A faithful Pacman clone with intelligent ghost AI, power-ups, maze navigation, scoring system, and classic arcade gameplay.**
 
-The Pacman game is built as a desktop application using JavaFX. The application window starts without a title bar for an immersive, arcade-like experience. 
+[Features](#what-it-does) • [Tech Stack](#tech-stack) • [Quick Start](#getting-started)
 
-### Features:
-- **Movement**: The player controls Pacman using the arrow keys or WASD. Pacman moves continuously in the selected direction.
-- **Ghosts**: Six ghosts move within the maze, attempting to capture Pacman. Their movement is based on simple AI that adapts to Pacman’s position.
-- **Points**: The player collects points by moving over specific cells. The total number of points required to win is pre-calculated.
-- **Game States**: The game handles various states such as game start, win, loss, and pause.
-- **Lives**: The player has three lives, which are displayed visually using heart icons.
-- **High Score**: The game keeps track of the highest score achieved, saved in a file.
+</div>
 
-## Custom Components
+---
 
-The Pacman game includes various custom components to enhance the gameplay experience:
-1. **Graphics and Animation**: JavaFX’s `Canvas` and `GraphicsContext` are used to render the game graphics, including Pacman, ghosts, walls, and points. The game runs in a loop, with a `Timeline` controlling the frame updates.
-2. **Custom Ghost AI**: Ghosts use simple AI to move around the maze. They change direction randomly unless blocked by walls or required to follow Pacman.
-3. **Lives System**: The game visually represents lives using heart icons (`ImageView`), which are updated as the player loses lives.
-4. **Persistent High Score**: The high score is stored in a text file, which is loaded when the game starts and updated when the player achieves a new high score.
-5. **Game State Management**: Different states such as game start, game over, and pause are handled using boolean flags and user inputs.
+## What It Does
 
-## Method of Points Collection
+Pacman is a complete recreation of the iconic arcade game with authentic mechanics, intelligent ghost behaviors, and smooth JavaFX graphics. Navigate the maze, eat pellets, avoid ghosts, and rack up high scores in this nostalgic experience.
 
-The maze consists of cells that either contain a wall or a point. When Pacman moves over a cell containing a point, the point is "collected," and the score is incremented. This is managed by checking whether a cell has the point flag set in the `screenData` array. If a point exists in the current cell, the game removes the point and increases the score.
+**Core gameplay:**
+- **Maze navigation** - classic Pacman maze layout with walls and corridors
+- **Pellet collection** - eat all pellets to complete the level
+- **Ghost AI** - four ghosts with distinct personalities (chase, scatter, frightened modes)
+- **Power-ups** - eat power pellets to temporarily turn ghosts blue and vulnerable
+- **Score tracking** - points for pellets (10), power pellets (50), and ghosts (200/400/800/1600)
+- **Lives system** - three lives, lose one per ghost collision
 
-### Instructions:
-1. Run the program, and the main window will appear with a prompt to press "Space" to start.
-2. Control Pacman using the arrow keys or WASD.
-3. Avoid ghosts while collecting all the points in the maze.
-4. If you lose all lives, the game will display a "Game Over" screen.
-5. If all points are collected, the game will restart the level.
-6. Press "Space" to pause the game.
+**Ghost AI behaviors:**
+- **Chase mode** - ghosts actively pursue Pacman using pathfinding
+- **Scatter mode** - ghosts retreat to corners (periodic behavior switch)
+- **Frightened mode** - triggered by power pellets, ghosts flee randomly
+- **Each ghost has unique targeting:** Blinky (direct chase), Pinky (ambush), Inky (complex), Clyde (proximity-based)
 
-## Time and Space Complexity Analysis
+**What makes it authentic:**
+- Faithful to original Pacman mechanics and timing
+- Smooth sprite-based animations
+- Ghost respawn system after being eaten
+- Classic sound effects (wakka-wakka, ghost eaten, etc.)
+- Level completion detection
+- Game over and restart functionality
 
-### Time Complexity:
-- **Ghost Movement**: The ghosts are moved in each frame, which has a time complexity of O(1) per frame. There are `n` ghosts, so the total time complexity for ghost movement per frame is O(n).
-- **Player Movement**: Similar to ghosts, Pacman’s movement occurs at O(1) per frame.
-- **Collision Detection**: Checking for collisions (Pacman vs. ghosts, Pacman vs. walls) also occurs at O(1) per frame.
-- **Total**: Since all game actions occur in real-time with constant updates per frame, the overall time complexity per frame is O(n), where `n` is the number of ghosts. However, the complexity of handling user input, updating positions, and rendering graphics remains constant for most actions.
+The game loop runs at constant frame rate, collision detection uses grid-based positioning, and ghost movement employs pathfinding algorithms to create challenging yet fair gameplay.
 
-### Space Complexity:
-- **Maze Data**: The maze is stored as a 2D array (`screenData`) of size `N_BLOCKS × N_BLOCKS`, which is fixed at 15 × 15. This takes up O(N^2) space.
-- **Ghosts' Data**: Each ghost has several properties (`x`, `y`, `dx`, `dy`, `speed`), so the total space complexity for the ghosts is O(n).
-- **Total**: The space complexity is dominated by the maze size and the number of ghosts, so it is O(N^2 + n), where `N` is the number of blocks per side of the maze (15 in this case), and `n` is the number of ghosts.
+---
 
+## Tech Stack
+
+**Language:** Java 11  
+**Framework:** JavaFX (Scene, Canvas, AnimationTimer)  
+**Build Tool:** Maven (dependency management, packaging)  
+**UI:** FXML for menus, Canvas for game rendering  
+**Algorithms:** BFS/A* for ghost pathfinding, state machines for AI  
+**Audio:** JavaFX MediaPlayer for sound effects  
+**Project Structure:** Maven standard layout
+
+### Architecture
+
+Classic game loop with entity-component pattern:
+
+```
+Main (Application Launcher)
+      ↓
+Controller (Menu Logic)
+      ↓
+Game Loop (AnimationTimer - 60 FPS)
+      ↓
+┌─────────────────────────────────┐
+│   Game State Manager            │
+│   - Pacman entity               │
+│   - 4 Ghost entities            │
+│   - Maze grid (2D array)        │
+│   - Score, lives, level         │
+└─────────────────────────────────┘
+      ↓
+Systems:
+  ├─ Input Handler (arrow keys)
+  ├─ Movement System (grid-based)
+  ├─ Collision Detection (pellets, ghosts, walls)
+  ├─ Ghost AI State Machine
+  │    ├─ Chase (pathfinding toward Pacman)
+  │    ├─ Scatter (retreat to corners)
+  │    └─ Frightened (random movement)
+  ├─ Rendering (Canvas draw calls)
+  └─ Audio System (sound effects)
+```
+
+**Ghost AI State Machine:**
+```
+Initial: SCATTER (7 seconds)
+  ↓
+CHASE (20 seconds)
+  ↓
+SCATTER (7 seconds)
+  ↓
+CHASE (20 seconds)
+  ↓
+... repeats
+
+FRIGHTENED mode (triggered by power pellet):
+  - Overrides current mode for 10 seconds
+  - Ghosts turn blue, movement reverses
+  - Collision = ghost eaten (returns to spawn)
+  - After timeout, resume previous mode
+```
+
+**Pathfinding Algorithm (Chase Mode):**
+```
+For each ghost:
+  target = calculateTarget(ghost_type, pacman_position)
+  path = A_star(ghost_position, target)
+  next_move = path[0]
+  move_ghost(next_move)
+
+Ghost-specific targets:
+  - Blinky (Red): Pacman's current position
+  - Pinky (Pink): 4 tiles ahead of Pacman's direction
+  - Inky (Cyan): Vector projection based on Blinky
+  - Clyde (Orange): Chase if far, scatter if near
+```
+
+**Key Implementation Details:**
+- **Maze Representation:** 2D char array ('W'=wall, '.'=pellet, 'O'=power pellet, ' '=empty)
+- **Grid-Based Movement:** Entities move tile-by-tile (not pixel-perfect), speeds controlled by frame skip
+- **Collision Detection:** Grid position comparison (`pacman.x == ghost.x && pacman.y == ghost.y`)
+- **Score Multiplier:** Ghost value doubles for each ghost eaten during single power-up (200→400→800→1600)
+- **Canvas Rendering:** Double-buffered drawing with sprite sheets for animations
+- **Sound Management:** Pre-loaded audio clips triggered by events (eat pellet, ghost collision, etc.)
+
+---
+
+## Project Structure
+
+```
+Pacman/
+├── pom.xml                      # Maven project configuration
+├── src/
+│   └── main/
+│       ├── java/
+│       │   └── com/example/pacman/
+│       │       ├── Main.java              # Application entry point
+│       │       ├── Controller.java        # Menu controller
+│       │       ├── Open.java             # Welcome screen
+│       │       └── module-info.java      # Java module descriptor
+│       └── resources/
+│           ├── fxml files               # UI layouts
+│           ├── sprites/                # Pacman, ghosts, maze tiles
+│           ├── sounds/                 # Audio effects
+│           └── fonts/                  # Custom fonts
+└── target/
+    └── Pacman.jar                      # Compiled executable
+```
+
+---
+
+## Getting Started
+
+**Requirements:**
+- Java 11 or higher
+- Maven 3.6+
+- JavaFX SDK 11+
+
+**Build and run:**
+
+```bash
+# Option 1: Maven build and run
+mvn clean install
+mvn javafx:run
+
+# Option 2: Run compiled JAR
+java --module-path /path/to/javafx-sdk/lib \
+     --add-modules javafx.controls,javafx.fxml,javafx.media \
+     -jar target/Pacman.jar
+
+# Option 3: IDE (IntelliJ IDEA recommended)
+# 1. Import as Maven project
+# 2. Configure JavaFX in project settings
+# 3. Run Main.java
+```
+
+**How to play:**
+
+1. **Start game** - launch application, click "Play"
+2. **Controls:**
+   - **Arrow Keys** - move Pacman (up, down, left, right)
+   - Movement continues in current direction until hitting wall or changing direction
+3. **Objective:**
+   - Eat all pellets to complete level
+   - Avoid ghosts (red, pink, cyan, orange)
+   - Eat power pellets to turn ghosts blue temporarily
+   - Chase and eat blue ghosts for bonus points
+4. **Scoring:**
+   - Small pellet: 10 points
+   - Power pellet: 50 points
+   - Ghost: 200/400/800/1600 (multiplier per power-up session)
+5. **Lives:**
+   - Start with 3 lives
+   - Lose life on ghost collision (unless ghost is blue/frightened)
+   - Game over when all lives lost
+
+**Tips:**
+- Corner ghosts in dead-ends when they're frightened
+- Plan routes to eat power pellets when ghosts are nearby
+- Learn ghost AI patterns for strategic positioning
+
+---
+
+## What's Next
+
+Future enhancements being considered:
+- Multiple maze layouts (classic, mini, mega)
+- Difficulty levels (faster ghosts, shorter power-up duration)
+- High score leaderboard with name entry
+- Fruit bonuses (cherry, strawberry, etc.)
+- Tunnel teleportation (left edge → right edge)
+- Animations for level transitions
+- Two-player mode (competitive or co-op)
+- Custom maze editor
+- Mobile touch controls for Android/iOS port
+
+---
 
 ## License
 
