@@ -1,133 +1,207 @@
 # Virtual Piano
 
-## Description
+<div align="center">
 
-This project is a **Virtual Piano** developed using **JavaFX**. It simulates a piano where each key on the keyboard is mapped to a musical note. The application provides visual feedback when a key is pressed or released, changing the color of the corresponding piano key in the UI.
-The application includes both white keys (natural notes) and black keys (accidentals), with the Shift key modifier used to activate the accidental notes.
-Additionally, the `jcodec` and `jcodec-javase` libraries are used in the project for potential future multimedia features, such as sound or video rendering.
+![Java](https://img.shields.io/badge/Java-JavaFX-orange?style=for-the-badge&logo=java)
+![MIDI](https://img.shields.io/badge/MIDI-javax.sound.midi-blue?style=for-the-badge&logo=music)
+![Music](https://img.shields.io/badge/Music-Instruments-green?style=for-the-badge&logo=piano)
 
-## Key Features
+**A fully playable virtual piano with 61 keys, multiple instruments, recording, playback, metronome, and volume control. Make music with your keyboard or mouse.**
 
-- **Graphical Interface**: Simulates a piano keyboard with responsive key visualizations.
-- **Keyboard Mappings**: Maps physical keys on the computer keyboard to virtual piano keys.
-- **Shift Functionality**: Users can play sharp notes by holding the Shift key while pressing the corresponding key.
-- **Real-time Sound Generation:** The application uses Java libraries to generate sound in real time when keys are pressed.
-- **Visual Feedback:** Each key changes color based on its state (pressed/released), giving instant feedback on user actions.
-- **Playback:** Users can load and play previously recorded audio files.
-- **Metronome:** A built-in metronome to assist users in maintaining a steady tempo while practicing.
+[Features](#what-it-does) • [Tech Stack](#tech-stack) • [Quick Start](#getting-started)
 
+</div>
 
-## Code Structure
+---
 
-The application is structured into several classes, each responsible for different functionalities. Below is an overview of the classes used in the application:
+## What It Does
 
-1. **AudioRecorder**
-   - Responsible for managing audio recording functionalities. It handles the capture of audio data and saves it to files.
+This is a feature-rich virtual piano built with JavaFX and Java's MIDI API. Play 61 keys (5 octaves) using your keyboard or mouse, switch between different instruments, record performances, play them back, and keep rhythm with an integrated metronome.
 
-2. **Controller**
-   - Acts as the main controller for the application, coordinating between the UI and backend logic. It manages the application state and user interactions.
+**Core features:**
+- **61-key piano**: 36 white keys + 25 black keys spanning 5 octaves
+- **Keyboard or mouse control**: Play with keyboard shortcuts or click keys with mouse
+- **Multiple instruments**: Piano, organ, guitar, strings, brass, and more (MIDI instrument bank)
+- **Recording functionality**: Record your performance and save it
+- **Playback**: Play back recorded sessions with accurate timing
+- **Metronome**: Built-in metronome with adjustable BPM for practice
+- **Volume control**: Adjust master volume on the fly
+- **Visual feedback**: Keys light up when pressed (white keys → gray, black keys → darker)
+- **Key labels**: Each key shows its keyboard shortcut
+- **Custom window**: Transparent background with rounded corners
 
-3. **CustomButtonSkin**
-   - A custom skin for buttons in the GUI, providing unique visual styles and interactions for piano keys.
+**Advanced features:**
+- **61-key mapping**: Full keyboard layout (1-9, Q-P, A-L, Z-M, etc.)
+- **Shift key modifier**: Access black keys with Shift+number
+- **AudioRecorder integration**: Export recordings to audio files
+- **Metronome controller**: Separate panel for tempo and time signature
+- **Volume menu**: Real-time volume adjustment slider
+- **Semantics menu**: Key assist and music theory helpers
 
-4. **KeyAssistController and KeyAssistMenu**
-   - Handles key assistance features, helping users learn the piano keys and their corresponding notes. The menu provides additional options for assistance.
+**Why it's awesome:**
+- Realistic MIDI sound using javax.sound.midi
+- Low latency key response
+- Professional instrument library
+- Recording and playback for learning
+- Clean, modern JavaFX interface
 
-5. **Main**
-   - The entry point of the application where keybindings are set up and the main application window is initialized. It also handles user inputs for playing notes.
+The piano uses JavaFX Pane with styled Rectangle nodes for keys, and javax.sound.midi for sound synthesis. Key presses are mapped to MIDI note numbers (C1-C6).
 
-6. **MetafileUpdater**
-   - Updates and manages metadata for audio files. It ensures that all audio recordings have appropriate labels and information.
+---
 
-7. **Metronome and MetronomeController and MetronomeMenu**
-   - The Metronome class generates a steady beat for practice. The MetronomeController manages the metronome's state and settings, while the MetronomeMenu provides options for customization.
+## Tech Stack
 
-8. **MusicPlayer**
-   - Responsible for playing back audio files. It manages the loading, playback, and stopping of music.
+**Language:** Java (JavaFX 17+)  
+**Audio Engine:** javax.sound.midi (`MidiChannel`, `Synthesizer`, `Instrument`)  
+**UI Framework:** JavaFX (Pane, Rectangle, Button, Scene, FXML)  
+**Controllers:** FXML controllers for UI interactions  
+**Recording:** Custom AudioRecorder class  
+**Metronome:** Timer-based beat generator with MIDI output
 
-9. **SemanticsController and SemanticsMenu**
-   - Manages semantic analysis features that provide feedback on the user's performance. The menu allows users to access various semantics-related options.
+### Architecture
 
-10. **VolumeController and VolumeMenu**
-    - Handles volume control for the application. The VolumeController adjusts the audio levels, while the VolumeMenu provides options for users to set their preferred volume.
+Event-driven architecture with MIDI synthesis and UI feedback:
 
-  
-## Key Mappings
+```
+JavaFX Application
+      ↓
+FXML UI (61 Key Rectangles)
+      ↓
+Event Handlers (Keyboard + Mouse)
+      ↓
+┌──────────────┬──────────────┬──────────────┬───────────────┐
+│  Key Mapping │  MIDI Engine │  Recording   │  Metronome    │
+│  Handler     │  (Synth)     │  System      │  Engine       │
+└──────────────┴──────────────┴──────────────┴───────────────┘
+      ↓              ↓              ↓               ↓
+KeyCode → Note  MidiChannel    AudioRecorder   Timer Beats
+(e.g., 1→C1)    noteOn/Off     WAV Export      BPM Control
+```
 
-The following mappings are used for playing notes:
+**How it works:**
+- **Key Press**: Keyboard or mouse event → map to note number (0-60) → call `playMedia(note, label)`
+- **MIDI Output**: `MidiChannel.noteOn(noteNumber, velocity)` triggers sound
+- **Visual Feedback**: Key Rectangle's background color changes on press, resets on release
+- **Recording**: Captures MIDI events with timestamps, stores in list
+- **Playback**: Replays stored events with original timing
+- **Metronome**: Timer fires at BPM interval, plays click sound via MIDI
+- **Instrument Change**: Switch MIDI program (e.g., 0=Piano, 40=Violin, 73=Flute)
 
-- **Numbers and Letters**: Digits (0-9), letters (A-Z), and Shift-modified keys are mapped to specific piano keys.
-- **Shift for Black Keys**: Holding Shift while pressing certain keys triggers black (accidental) keys like C# (Db), D# (Eb), etc.
+**Key Implementation Details:**
+- **Key Layout**: 36 white keys (0-35) displayed as wide rectangles; 25 black keys (36-60) as narrow rectangles on top
+- **Note Mapping**: KeyCode.DIGIT1 → C1, KeyCode.DIGIT2 → D1, Shift+DIGIT1 → Db1, etc.
+- **MIDI Notes**: C1=36, D1=38, E1=40, F1=41, G1=43, A1=45, B1=47 (standard MIDI numbering)
+- **Synthesizer**: Opens default MIDI synthesizer, gets first channel, loads SoundFont
+- **KeyPressed ArrayList**: Tracks which keys are currently pressed to prevent repeated noteOn while key held
 
-## Programming Techniques
+---
 
-### 1. **Event-Driven Programming**
+## Project Structure
 
-The program relies heavily on **JavaFX’s event-driven architecture**. The two main event listeners are:
-  
-- **`setOnKeyPressed`**: Handles the pressing of a key, determining which note corresponds to the input and updating the virtual keyboard visually by changing the background color of the key.
-- **`setOnKeyReleased`**: Resets the key’s visual state when the key is released by restoring the background color.
+```
+VirtualPiano/
+├── src/
+│   ├── main/
+│   │   ├── Main.java               # Entry point + JavaFX setup
+│   │   ├── Controller.java         # Main piano controller
+│   │   ├── AudioRecorder.java      # Recording functionality
+│   │   ├── MusicPlayer.java        # Playback engine
+│   │   ├── Metronome.java          # Metronome logic
+│   │   ├── MetronomeController.java # Metronome UI
+│   │   ├── MetronomeMenu.java      # Metronome popup
+│   │   ├── VolumeController.java   # Volume slider
+│   │   ├── VolumeMenu.java         # Volume popup
+│   │   ├── SemanticsController.java # Music theory helpers
+│   │   ├── SemanticsMenu.java      # Helper popup
+│   │   ├── KeyAssistController.java # Keyboard layout guide
+│   │   ├── KeyAssistMenu.java      # Key assist popup
+│   │   ├── MetafileUpdater.java    # Metadata handler
+│   │   └── CustomButtonSkin.java   # Styled button
+│   └── resources/
+│       ├── virtual-piano.fxml      # Main UI layout
+│       ├── icon.png                # App icon
+│       └── sounds/                 # MIDI soundfonts (optional)
+└── Piano.iml                       # IntelliJ module file
+```
 
-### 2. **State Management**
+**Main components:**
+- `Main.java`: JavaFX application, scene setup, key event handling
+- `Controller.java`: Key mapping, MIDI playback, UI updates
+- `AudioRecorder.java`: Recording system with WAV export
+- `Metronome.java`: Timer-based beat generator
+- 61 keys: 36 white Rectangle nodes + 25 black Rectangle nodes
 
-An **ArrayList** `keyPressed` is used to manage the state of each key. Each index in the list corresponds to a specific piano key, with a boolean value indicating whether the key is pressed or not.
+---
 
-### 3. JavaFX Scene Graph and Styles
+## Getting Started
 
-The application uses JavaFX's Scene Graph for rendering the UI, and the styles of keys are updated dynamically using setStyle() to change their background color upon keypress.
+### Prerequisites
 
-### 4. Shift Key Modifier
+- **Java 17+** with JavaFX SDK
+- Maven or Gradle (for building from source)
+- MIDI synthesizer (included with Java)
 
-JavaFX provides the ability to check if the Shift key is pressed using e.isShiftDown(). This feature allows the application to differentiate between natural and accidental notes when the same physical key is pressed with or without the Shift modifier.
+### Running the Application
 
-### 5. Efficient Key Mapping Using Switch-Case
+**Option 1: JAR**
+```bash
+# Run with JavaFX modules:
+java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml,javafx.media -jar Piano.jar
+```
 
-The mapping of keys is handled using a switch-case structure, allowing efficient O(1) lookups for determining which virtual piano key should be activated based on the key press.
+**Option 2: Maven**
+```bash
+mvn clean javafx:run
+```
 
-### 6. jcodec and jcodec-javase Libraries
+**Option 3: From Source**
+```bash
+# Compile:
+javac --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -d bin src/main/*.java
 
-This project incorporates the jcodec and jcodec-javase libraries, although they are not actively used in the current state of the application. These libraries provide functionality for audio and video processing, which could be integrated in the future to add sound or multimedia features such as video rendering or note recording.
-These libraries are open-source and lightweight, making them ideal candidates for multimedia enhancements in future versions of the application.
+# Run:
+java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -cp bin main.Main
+```
 
+### How to Play
 
-## Requirements to Run the Application
+**Keyboard controls:**
+- **Numbers (1-9)**: White keys (C, D, E, F, G, A, B, C, D)
+- **Shift+Numbers**: Black keys (C#/Db, D#/Eb, F#/Gb, G#/Ab, A#/Bb)
+- **Letters (Q-P, A-L, Z-M)**: Additional octaves
+- **Space**: Play/pause recording
+- **Esc**: Exit
 
-### 1. Software Requirements
-    JDK: Java Development Kit version 8 or higher.<br/>
-    JavaFX SDK: Ensure that the JavaFX libraries are correctly set up in your IDE or build system.<br/>
-    jcodec and jcodec-javase: These libraries must be added as dependencies for future multimedia enhancements.<br/>
-    IDE: The application can be developed and run on any Java-compatible IDE, such as IntelliJ IDEA, Eclipse, or NetBeans.<br/>
+**Mouse controls:**
+- Click on any key (white or black) to play note
+- Use menu buttons for instrument change, recording, metronome, etc.
 
-### 2. Hardware Requirements
-    Operating System: The application is cross-platform and can run on Windows, macOS, and Linux.<br/>
-    RAM: A minimum of 2GB RAM is recommended, but the application is lightweight.<br/>
-    CPU: Any modern processor capable of running Java applications.<br/>
+**Features:**
+1. **Change instrument**: Click instrument menu → select from list
+2. **Record**: Click record button → play something → click stop
+3. **Playback**: Click play button to hear recording
+4. **Metronome**: Open metronome menu → set BPM → start
+5. **Volume**: Adjust volume slider in volume menu
 
-### 3. Installation Steps
-    Install JDK and JavaFX SDK.<br/>
-    Add the jcodec and jcodec-javase libraries to your project dependencies.<br/>
-    Clone or download the project.<br/>
-    Open the project in an IDE that supports JavaFX.<br/>
-    Run the main() method to start the application.<br/>
+---
 
-## Time and Space Complexity
+## What's Next
 
-### Time Complexity
-    Key Press/Release Handling: Each key press or release is handled in constant time O(1). The switch-case structure and keyPressed state management allow for immediate actions.
-    State Update: The state of each key (pressed or released) and its corresponding visual update also operate in O(1) time.
+**Potential improvements:**
+- Add sustain pedal support
+- Implement chord detection and display
+- Add sheet music display (real-time notation)
+- Export to MIDI file format
+- Add drum pad section
+- Multiple track recording (overdubbing)
+- Effects (reverb, delay, chorus)
+- Looping functionality
 
-### Space Complexity
-    Key State Management: The keyPressed ArrayList uses O(n) space, where n is the number of keys (61 keys, including accidentals from C1 to C6).
-    UI Components: JavaFX buttons representing the piano keys also take up O(n) space.
-
-Overall, the time complexity per operation (keypress/release) is O(1), and the space complexity is O(n).
-
-## Examples and illustrations
-
-Here is an example of the application interface featuring various tools and adjustments:
-
-![image](example_interface.png)
+---
 
 ## License
 
-This code is proprietary and may not be copied, distributed, or modified without express written permission from the author.
+**Proprietary License**  
+© 2026. All rights reserved.
+
+This software is proprietary and confidential. Unauthorized copying, modification, distribution, or use of this software, via any medium, is strictly prohibited without explicit written permission from the owner.
